Update native project and add user function

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -13,4 +13,6 @@
     </ion-toolbar>
   </ion-header>
 <ion-text>{{vm.status}}</ion-text>
+<br/><br/>
+<ion-button (click)="getUser()">Get User</ion-button>
 </ion-content>
