Add Capacitor Preferences

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,4 +15,8 @@
 <ion-text>{{vm.status}}</ion-text>
 <br/><br/>
 <ion-button (click)="getUser()">Get User</ion-button>
+<ion-button (click)="getConfig()">Get ionic.email</ion-button>
+<ion-list>
+  <ion-item *ngFor="let key of keys" (click)="get(key)">{{key}}</ion-item>
+</ion-list>
 </ion-content>
