(fix): update to use @capacitor-community/mdm-appconfig

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,8 +15,6 @@
 <ion-text>{{vm.status}}</ion-text>
 <br/><br/>
 <ion-button (click)="getUser()">Get User</ion-button>
-<ion-button (click)="getConfig()">Get ionic.email</ion-button>
-<ion-list>
-  <ion-item *ngFor="let key of keys" (click)="get(key)">{{key}}</ion-item>
-</ion-list>
+<ion-button (click)="get('ionic.email')">Get ionic.email</ion-button>
+<ion-button (click)="get('ionic.user')">Get ionic.user</ion-button>
 </ion-content>
