(fix) update Android version and test

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,6 @@
 <ion-text>{{vm.status}}</ion-text>
 <br/><br/>
 <ion-button (click)="getUser()">Get User</ion-button>
-<ion-button (click)="get('ionic.email')">Get ionic.email</ion-button>
-<ion-button (click)="get('ionic.user')">Get ionic.user</ion-button>
+<ion-button (click)="get('ionic-email')">Get ionic-email</ion-button>
+<ion-button (click)="get('ionic-user')">Get ionic-user</ion-button>
 </ion-content>
